<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_resize"
        android:icon="@drawable/ic_format_size"
        android:title="@string/resize"
        app:showAsAction="ifRoom" >
        <menu>
            <item
                android:id="@+id/action_resize_12"
                android:title="@string/_12" />
            <item
                android:id="@+id/action_resize_14"
                android:title="@string/_14" />
            <item
                android:id="@+id/action_resize_16"
                android:title="@string/_16" />
            <item
                android:id="@+id/action_resize_18"
                android:title="@string/_18" />
            <item
                android:id="@+id/action_resize_20"
                android:title="@string/_20" />
        </menu>
    </item>
    <item
        android:id="@+id/action_favourite"
        android:icon="@drawable/ic_favourites"
        android:title="@string/favourite"
        app:showAsAction="ifRoom" />

</menu>